--- a/index.html
+++ b/index.html
@@ -24,23 +24,31 @@
           <a href="index.html">webcamp pro</a>
         </li>
         <li class="nav-list-item">
-          <a href="index.html"></a>
+          <a href="index.html">webcamp woman</a>
+        </li>
+        <li class="nav-list-item">
+          <a href="index.html">webcamp career</a>
         </li>
             </ul>
     </nav>
 
-    <!-- main-visual用のdiv -->
-    <div class="main-visual">
-      <div class="main-visual-content"></div>
-    </div>
-
-    <!-- main用のdiv -->
     <div class="main">
-      <div class="blog"></div>
-      <div class="sidebar"></div>
+      <div class="box1"></div>
+      <div class="box2"></div>
+      <div class="box3"></div>
+      <div class="box4"></div>
+      <div class="box5"></div>
+      <div class="box6"></div>
+      <div class="box7"></div>
+      <div class="box8"></div>
+      <div class="box9"></div>
+      <div class="box10"></div>
+      <div class="box11"></div>
+      <div class="box12"></div>
     </div>
 
-    <!-- footer -->
-    <footer></footer>
+    <footer>
+      <p class="footer-text">© All rights reserved by Infratop.Inc.</p>
+    </footer>
   </body>
 </html>
